el gap en navbar de mi pantalla fixed!!!

--- a/OxxoWeb/wwwroot/css/galistyle.css
+++ b/OxxoWeb/wwwroot/css/galistyle.css
@@ -4,7 +4,7 @@
 body {
     font-family: "Titillium Web", sans-serif;
     margin: 0;
-    padding: 2rem;
+    padding: 0rem;
     background-color: #f8f8f8;
     color: #222;
     padding-bottom: 0; /* elimina padding extra si lo tienes */
